--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
             <li>shop product</li>
         </ul>
 
-        <div class="logo">Paintbox</div>
-
         <ul class="right">
             <li>journal</li>
             <li>
@@ -36,9 +34,79 @@
             </div>
             <div class="first_text"></div>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <section class="second">
+            <div class="second_picture">
+                <img class="image" src="img/2.JPG" alt="">
+            </div>
+            <div class="second_text"></div>
+        </section>
+
+        <section class="third">
+            <div class="the_shop">THE SHOP</div>
+            <h1>Our Newest Polish Colors</h1>
+            <div class="the_shop_items">
+                <div class="item1">
+                    <img class="item_img" src="img/item1.png" alt="">
+                    <div class="item_category">
+                        POWER COUPLE
+                    </div>
+                    <div class="item_title">
+                        Like Gilded + Like Velvet
+                    </div>
+                    <div class="item_price">
+                        $40.00
+                    </div>
+                    <div class="item_button">
+                        <button>
+                            ADD TO CART
+                        </button>
+                    </div>
+                </div>
+                <div class="item2">
+                    <img class="item_img" src="img/item2.png" alt="">
+                    <div class="item_category">
+                        POWER COUPLE
+                    </div>
+                    <div class="item_title">
+                        Like Gilded + Like Velvet
+                    </div>
+                    <div class="item_price">
+                        $40.00
+                    </div>
+                    <div class="item_button">
+                        <button>
+                            ADD TO CART
+                        </button>
+                    </div>
+                </div>
+                <div class="item3">
+                    <img class="item_img" src="img/item3.png" alt="">
+                    <div class="item_category">
+                        POWER COUPLE
+                    </div>
+                    <div class="item_title">
+                        Like Gilded + Like Velvet
+                    </div>
+                    <div class="item_price">
+                        $40.00
+                    </div>
+                    <div class="item_button">
+                        <button>
+                            ADD TO CART
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="fourth">
+            <div class="second_picture">
+                <img class="image" src="img/3.JPG" alt="">
+            </div>
+            <div class="second_text"></div>
+        </section>
+
         <section></section>
         <section></section>
         <section></section>
