--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paintbox</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -32,14 +36,32 @@
             <div class="first_picture">
                 <img class="image" src="img/1.jpeg" alt="">
             </div>
-            <div class="first_text"></div>
+            <div class="first_text">
+                <h1>
+                    Discover a modern approach to nails, color theory, 
+                    and self-expression via Paintbox polish.
+                </h1>
+                <button>
+                    EXPRORE MORE
+                </button>
+            </div>
         </section>
 
         <section class="second">
             <div class="second_picture">
                 <img class="image" src="img/2.JPG" alt="">
             </div>
-            <div class="second_text"></div>
+            <div class="second_text">
+                <p>
+                    OUR STUDIO
+                </p>
+                <h1>
+                    Book new nails at our Upper East Side studio.
+                </h1>
+                <button>
+                    EXPRORE MORE
+                </button>
+            </div>
         </section>
 
         <section class="third">
@@ -101,22 +123,60 @@
         </section>
 
         <section class="fourth">
-            <div class="second_picture">
+            <div class="fourth_picture">
                 <img class="image" src="img/3.JPG" alt="">
             </div>
-            <div class="second_text"></div>
+            <div class="fourth_text">
+                <p>
+                    GIFT CARDS
+                </p>
+                <h1>
+                    Give the gift of the Paintbox experience 
+                    for a manicure that tells a story.
+                </h1>
+                <button>
+                    EXPRORE MORE
+                </button>
+            </div>
         </section>
 
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="email">
+            <p>Follow us at @paintboxnails</p>
+        </section>
 
     </main>
 
     <footer>
 
-        <section></section>
+        <section class="bottom">
+            <div class="footer_left">
+                <p>SUPPORT</p>
+                <ul>
+                    <li>F.A.Q.</li>
+                    <li>PRIVACY POLICY</li>
+                    <li>TERMS AND CONDITIONS</li>
+                    <li>ACCESSIBILITY</li>
+                </ul>
+            </div>
+            <div class="footer_center">
+                <p>FLLOW US</p>
+                <ul>
+                    <li>INSTAGRAM</li>
+                    <li>PINTEREST</li>
+                    <li>FACEBOOK</li>
+                    <li>NEWSLETTER</li>
+                </ul>
+            </div>
+            <div class="footer_right">
+                <p>PAINTBOX</p>
+                <ul>
+                    <li>OUR STUDIO</li>
+                    <li>CAREERS</li>
+                    <li>PRESS</li>
+                    <li>CONTACT US</li>
+                </ul>
+            </div>
+        </section>
 
     </footer>
 
